examples/errors/parsing/state-uppercase-int.cn
main : () [impure] =
  let p = New[Int] 0;
  ()
